# rust-projects

MNIST/: Cargo.toml
MNIST/src/: main.rs  mnist_model.pt  model.py
blockchain/: Cargo.toml
blockchain/data/blockchain/: db
blockchain/src/: block.rs  blockchain.rs  cli.rs  main.rs  transaction.rs  wallet.rs
dashboard/: cargo.toml
dashboard/src/: main.rs
distributed_kv/: Cargo.toml  Readme.md
distributed_kv/src/: main.rs
distributed_kv/src/client/: cli.rs  mod.rs
distributed_kv/src/server/: mod.rs  network.rs  replication.rs  storage.rs
file_io/src/: main.rs
fourier-transform/: Cargo.toml
fourier-transform/src/: main.rs
microservice/: Cargo.toml
microservice/src/: main.rs
pointers_refs/: Cargo.toml
pointers_refs/src/: main.rs
regex_matching/: Cargo.toml
regex_matching/src/: main.rs
rust-shell/src/: main.rs
rust_todo/: Cargo.toml  todo.json
rust_todo/src/: main.rs
trading_system/: Cargo.toml
trading_system/src/: cli.rs  db.rs  main.rs  utils.rs
trading_system/src/handlers/: admin.rs  customer.rs  mod.rs  regulator.rs
trading_system/src/models/: account.rs  mod.rs  transaction.rs  wallet.rs
web server/: Cargo.toml
web server/src/: handler.rs  logger.rs  main.rs  router.rs  server.rs
web server/static/: index.html
