[package]
name = "distributed_kv_store"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"